# OpenCV

./: CMakeLists.txt
equalizeHist and CLAHE/: main.cpp
utils/: multipleImage.cpp  utils.h
